--- a/SendTeams - (C).xaml
+++ b/SendTeams - (C).xaml
@@ -53,7 +53,6 @@
       <x:String>BalaReva.EasyExcel.Main</x:String>
       <x:String>BalaReva.EasyExcel.Utilities</x:String>
       <x:String>System.Text.RegularExpressions</x:String>
-      <x:String>UiPath.Mail.Activities</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -100,8 +99,6 @@
       <AssemblyReference>UiPath.UIAutomationNext</AssemblyReference>
       <AssemblyReference>UiPath.UIAutomationNext.Activities</AssemblyReference>
       <AssemblyReference>WindowsBase</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
-      <AssemblyReference>UiPath.Mail.Activities.Design</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence sap:VirtualizedContainerService.HintSize="643.2,2433.6" sap2010:WorkflowViewState.IdRef="Sequence_6">
@@ -167,17 +164,22 @@
                 </InArgument>
               </ui:ReadRange.Range>
             </ui:ReadRange>
-            <ui:FilterDataTable sap2010:Annotation.AnnotationText="Filtrar NORTE e retirar colunas desnecessárias" DataTable="[dt_data]" DisplayName="Filter Data Table" FilterRowsMode="Remove" sap:VirtualizedContainerService.HintSize="484.8,193.6" sap2010:WorkflowViewState.IdRef="FilterDataTable_2" OutputDataTable="[dt_data]" SelectColumnsMode="Keep">
+            <ui:FilterDataTable sap2010:Annotation.AnnotationText="Filtrar NORTE e retirar colunas desnecessárias" DataTable="[dt_data]" DisplayName="Filter Data Table" FilterRowsMode="Remove" sap:VirtualizedContainerService.HintSize="484.8,193.6" sap2010:WorkflowViewState.IdRef="FilterDataTable_3" OutputDataTable="[dt_data]" SelectColumnsMode="Keep">
               <ui:FilterDataTable.Filters>
                 <scg:List x:TypeArguments="ui:FilterOperationArgument" Capacity="4">
                   <ui:FilterOperationArgument Column="{x:Null}" Operand="{x:Null}" BooleanOperator="And" Operator="CONTAINS" />
                 </scg:List>
               </ui:FilterDataTable.Filters>
               <ui:FilterDataTable.SelectColumns>
-                <scg:List x:TypeArguments="InArgument" Capacity="4">
-                  <InArgument x:TypeArguments="x:Int32">[3]</InArgument>
+                <scg:List x:TypeArguments="InArgument" Capacity="8">
+                  <InArgument x:TypeArguments="x:Int32">[2]</InArgument>
                   <InArgument x:TypeArguments="x:Int32">[4]</InArgument>
                   <InArgument x:TypeArguments="x:Int32">[5]</InArgument>
+                  <InArgument x:TypeArguments="x:Int32">[6]</InArgument>
+                  <InArgument x:TypeArguments="x:Int32">[7]</InArgument>
+                  <InArgument x:TypeArguments="x:Int32">[9]</InArgument>
+                  <InArgument x:TypeArguments="x:Int32">[0]</InArgument>
+                  <InArgument x:TypeArguments="x:Int32">[1]</InArgument>
                 </scg:List>
               </ui:FilterDataTable.SelectColumns>
               <sap:WorkflowViewStateService.ViewState>
@@ -223,7 +225,7 @@
               </sap:WorkflowViewStateService.ViewState>
             </ui:CommentOut>
             <ui:OutputDataTable DataTable="[dt_data]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="484.8,80.8" sap2010:WorkflowViewState.IdRef="OutputDataTable_1" Text="[dt_dataString]" />
-            <umab:CreateHtmlContent DisplayName="Create HTML Content" sap:VirtualizedContainerService.HintSize="484.8,152.8" HtmlContent="[dt_dataHtml]" sap2010:WorkflowViewState.IdRef="CreateHtmlContent_2">
+            <umab:CreateHtmlContent DisplayName="Create HTML Content" sap:VirtualizedContainerService.HintSize="484.8,152.8" HtmlContent="[dt_dataHtml]" sap2010:WorkflowViewState.IdRef="CreateHtmlContent_1">
               <umab:CreateHtmlContent.HtmlContentArg>
                 <umabh:HtmlContentArgument FilePath=".data/HtmlContent0.html">
                   <umabh:HtmlContentArgument.RuntimeImages>
@@ -239,7 +241,7 @@
             </umab:CreateHtmlContent>
             <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="484.8,344.8" sap2010:WorkflowViewState.IdRef="TryCatch_2">
               <TryCatch.Try>
-                <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="HTMLtoImage.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="333.6,113.6" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="HTMLtoImage.xaml">
+                <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="HTMLtoImage - (C).xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="333.6,113.6" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="HTMLtoImage - (C).xaml">
                   <ui:InvokeWorkflowFile.Arguments>
                     <InArgument x:TypeArguments="x:String" x:Key="dt_dataHtml">[dt_dataHtml]</InArgument>
                     <InArgument x:TypeArguments="x:String" x:Key="usuario">[usuario]</InArgument>
@@ -273,13 +275,13 @@
             </TryCatch>
             <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="484.8,52.8" sap2010:WorkflowViewState.IdRef="CommentOut_4">
               <ui:CommentOut.Body>
-                <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="607.2,164.8" sap2010:WorkflowViewState.IdRef="Sequence_10">
+                <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="455.2,172.8" sap2010:WorkflowViewState.IdRef="Sequence_10">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <uix:NApplicationCard AttachMode="ByInstance" CloseMode="Never" DisplayName="Use Browser Edge: Alinhamento do Dia | Microsoft Teams" sap:VirtualizedContainerService.HintSize="396,52.8" sap2010:WorkflowViewState.IdRef="NApplicationCard_1" InteractionMode="WindowMessages" OpenMode="IfNotOpen" ScopeGuid="ecb3e958-1ddc-4cdd-8c6f-24762a400c41" Version="V2">
+                  <uix:NApplicationCard AttachMode="ByInstance" CloseMode="Never" DisplayName="Use Browser Edge: Alinhamento do Dia | Microsoft Teams" sap:VirtualizedContainerService.HintSize="393,61" sap2010:WorkflowViewState.IdRef="NApplicationCard_1" InteractionMode="WindowMessages" OpenMode="IfNotOpen" ScopeGuid="ecb3e958-1ddc-4cdd-8c6f-24762a400c41" Version="V2">
                     <uix:NApplicationCard.Body>
                       <ActivityAction x:TypeArguments="x:Object">
                         <ActivityAction.Argument>
