Melhorias de tempo

--- a/SendTeams - (C).xaml
+++ b/SendTeams - (C).xaml
@@ -6,7 +6,7 @@
   <this:SendTeams.usuario>
     <InArgument x:TypeArguments="x:String" />
   </this:SendTeams.usuario>
-  <sap:VirtualizedContainerService.HintSize>1240,2185</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1240,2217</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -100,15 +100,16 @@
       <AssemblyReference>UiPath.UIAutomationNext</AssemblyReference>
       <AssemblyReference>UiPath.UIAutomationNext.Activities</AssemblyReference>
       <AssemblyReference>WindowsBase</AssemblyReference>
+      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap:VirtualizedContainerService.HintSize="596,2120" sap2010:WorkflowViewState.IdRef="Sequence_6">
+  <Sequence sap:VirtualizedContainerService.HintSize="596,2152" sap2010:WorkflowViewState.IdRef="Sequence_6">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:ForEachFileX DisplayName="For Each File in Folder" Folder="excels\" sap:VirtualizedContainerService.HintSize="534,1998" sap2010:WorkflowViewState.IdRef="ForEachFileX_1" IncludeSubDirectories="False" OrderBy="NameAscFirst" SkipFolderWithoutPermission="False">
+    <ui:ForEachFileX DisplayName="For Each File in Folder" Folder="excels\" sap:VirtualizedContainerService.HintSize="534,2041" sap2010:WorkflowViewState.IdRef="ForEachFileX_1" IncludeSubDirectories="False" OrderBy="NameAscFirst" SkipFolderWithoutPermission="False">
       <ui:ForEachFileX.Body>
         <ActivityAction x:TypeArguments="si:FileInfo, x:Int32">
           <ActivityAction.Argument1>
@@ -117,7 +118,7 @@
           <ActivityAction.Argument2>
             <DelegateInArgument x:TypeArguments="x:Int32" Name="CurrentIndex" />
           </ActivityAction.Argument2>
-          <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="500,1731" sap2010:WorkflowViewState.IdRef="Sequence_1">
+          <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="500,1783" sap2010:WorkflowViewState.IdRef="Sequence_1">
             <Sequence.Variables>
               <Variable x:TypeArguments="sd:DataTable" Name="dt_data" />
               <Variable x:TypeArguments="x:String" Name="dt_dataString" />
@@ -127,8 +128,9 @@
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="438,101" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[CurrentFile.FullName]" />
-            <If Condition="[CurrentFile.Name = &quot;.xlsx&quot;]" sap:VirtualizedContainerService.HintSize="438,61" sap2010:WorkflowViewState.IdRef="If_2">
+            <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="438,92" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[CurrentFile.FullName]" />
+            <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="438,92" sap2010:WorkflowViewState.IdRef="LogMessage_3" Level="Trace" Message="[now.ToString]" />
+            <If Condition="[CurrentFile.Name = &quot;.xlsx&quot;]" sap:VirtualizedContainerService.HintSize="438,52" sap2010:WorkflowViewState.IdRef="If_2">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -156,7 +158,7 @@
                 </Sequence>
               </If.Else>
             </If>
-            <Assign sap:VirtualizedContainerService.HintSize="438,70" sap2010:WorkflowViewState.IdRef="Assign_1">
+            <Assign sap:VirtualizedContainerService.HintSize="438,82" sap2010:WorkflowViewState.IdRef="Assign_1">
               <Assign.To>
                 <OutArgument x:TypeArguments="x:String">[usuario]</OutArgument>
               </Assign.To>
@@ -164,7 +166,7 @@
                 <InArgument x:TypeArguments="x:String">[CurrentFile.Name.Split("."c)(0).TrimEnd]</InArgument>
               </Assign.Value>
             </Assign>
-            <If Condition="[System.Text.RegularExpressions.Regex.IsMatch(usuario,&quot;[0-9]&quot;) = True]" sap:VirtualizedContainerService.HintSize="438,61" sap2010:WorkflowViewState.IdRef="If_1">
+            <If Condition="[System.Text.RegularExpressions.Regex.IsMatch(usuario,&quot;[0-9]&quot;) = True]" sap:VirtualizedContainerService.HintSize="438,52" sap2010:WorkflowViewState.IdRef="If_1">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -192,22 +194,22 @@
                 </Sequence>
               </If.Else>
             </If>
-            <ui:ReadRange AddHeaders="False" DataTable="[dt_data]" DisplayName="Read Range Workbook" sap:VirtualizedContainerService.HintSize="438,97" sap2010:WorkflowViewState.IdRef="ReadRange_2" SheetName="Processos" WorkbookPath="[CurrentFile.FullName]">
+            <ui:ReadRange AddHeaders="False" DataTable="[dt_data]" DisplayName="Read Range Workbook" sap:VirtualizedContainerService.HintSize="438,88" sap2010:WorkflowViewState.IdRef="ReadRange_2" SheetName="Processos" WorkbookPath="[CurrentFile.FullName]">
               <ui:ReadRange.Range>
                 <InArgument x:TypeArguments="x:String">
                   <Literal x:TypeArguments="x:String" Value="" />
                 </InArgument>
               </ui:ReadRange.Range>
             </ui:ReadRange>
-            <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="438,61" sap2010:WorkflowViewState.IdRef="CommentOut_3">
+            <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="438,52" sap2010:WorkflowViewState.IdRef="CommentOut_3">
               <ui:CommentOut.Body>
-                <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="400,292" sap2010:WorkflowViewState.IdRef="Sequence_9">
+                <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="450,272" sap2010:WorkflowViewState.IdRef="Sequence_9">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <ui:FilterDataTable DataTable="[dt_data]" DisplayName="Filter Data Table" FilterRowsMode="Keep" sap:VirtualizedContainerService.HintSize="338,170" sap2010:WorkflowViewState.IdRef="FilterDataTable_1" OutputDataTable="[dt_data]" SelectColumnsMode="Remove">
+                  <ui:FilterDataTable DataTable="[dt_data]" DisplayName="Filter Data Table" FilterRowsMode="Keep" sap:VirtualizedContainerService.HintSize="388,161" sap2010:WorkflowViewState.IdRef="FilterDataTable_1" OutputDataTable="[dt_data]" SelectColumnsMode="Remove">
                     <ui:FilterDataTable.Filters>
                       <scg:List x:TypeArguments="ui:FilterOperationArgument" Capacity="4">
                         <ui:FilterOperationArgument BooleanOperator="And" Operator="CONTAINS">
@@ -235,8 +237,8 @@
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
             </ui:CommentOut>
-            <ui:OutputDataTable DataTable="[dt_data]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="438,89" sap2010:WorkflowViewState.IdRef="OutputDataTable_1" Text="[dt_dataString]" />
-            <umab:CreateHtmlContent DisplayName="Create HTML Content" sap:VirtualizedContainerService.HintSize="438,160" HtmlContent="[dt_dataHtml]" sap2010:WorkflowViewState.IdRef="CreateHtmlContent_1">
+            <ui:OutputDataTable DataTable="[dt_data]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="438,80" sap2010:WorkflowViewState.IdRef="OutputDataTable_1" Text="[dt_dataString]" />
+            <umab:CreateHtmlContent DisplayName="Create HTML Content" sap:VirtualizedContainerService.HintSize="438,151" HtmlContent="[dt_dataHtml]" sap2010:WorkflowViewState.IdRef="CreateHtmlContent_1">
               <umab:CreateHtmlContent.HtmlContentArg>
                 <umabh:HtmlContentArgument FilePath=".data/HtmlContent0.html">
                   <umabh:HtmlContentArgument.RuntimeImages>
@@ -251,7 +253,7 @@
                 </umabh:HtmlContentArgument>
               </umab:CreateHtmlContent.HtmlContentArg>
             </umab:CreateHtmlContent>
-            <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="438,359" sap2010:WorkflowViewState.IdRef="TryCatch_2">
+            <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="438,341" sap2010:WorkflowViewState.IdRef="TryCatch_2">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -259,7 +261,7 @@
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
               <TryCatch.Try>
-                <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="HTMLtoImage - (C).xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="334,122" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="HTMLtoImage - (C).xaml">
+                <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="HTMLtoImage - (C).xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="353,113" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="HTMLtoImage - (C).xaml">
                   <ui:InvokeWorkflowFile.Arguments>
                     <InArgument x:TypeArguments="x:String" x:Key="dt_dataHtml">[dt_dataHtml]</InArgument>
                     <InArgument x:TypeArguments="x:String" x:Key="usuario">[usuario]</InArgument>
